...
                                ),
                              ),
                              Padding(
                                padding: const EdgeInsetsDirectional.fromSTEB(
                                    8.0, 0.0, 8.0, 0.0),
                                child: TextFormField(
                                  key: const ValueKey('NameField_6sov'),
                                  controller: _model.nameFieldController,
                                  focusNode: _model.nameFieldFocusNode,
                                  autofocus: true,
                                  obscureText: false,
                                  decoration: InputDecoration(
                                    labelText: 'Vul je volledige naam in',
...
                    mainAxisAlignment: MainAxisAlignment.center,
                    children: [
                      wrapWithModel(
                        model: _model.operationButtonModel,
                        updateCallback: () => setState(() {}),
                        child: OperationButtonWidget(
                          key: const ValueKey('OperationButton_ku9o'),
                          text: 'Controleren',
                          onClick: () async {
                            logFirebaseEvent(
                                'LINK_SWIMRANKINGS_Container_4j03ekir_CAL');
                            var shouldSetState = false;
                            if (!(_model.nameFieldController.text != '')) {
...
