...
                        child: Align(
                          alignment: const AlignmentDirectional(0.0, 0.0),
                          child: wrapWithModel(
                            model: _model.operationButtonModel,
                            updateCallback: () => setState(() {}),
                            child: OperationButtonWidget(
                              key: const ValueKey('OperationButton_bahn'),
                              text: 'Begin nu',
                              onClick: () async {
                                logFirebaseEvent(
                                    'ONBOARDING_Container_wfnv7ytl_CALLBACK');
                                logFirebaseEvent('OperationButton_navigate_to');

...
